# bigquery-ops-analytics

./: .gitlab-ci.yml  .sqlfluff  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  dbt-test.yml
analytics/: anomaly_detector.py  dataset_curator.py  trend_calculator.py
anomaly_detection/: baseline_calculator.py  detector.py
cleansing/: cleanse_workload_telemetry.py  quality_checks.py
dags/: anomaly_detection_dag.py  cost_rollup_dag.py  fleet_analytics_dag.py
dbt/: dbt_project.yml  packages.yml  profiles.yml
dbt/macros/: analytics_macros.sql  date_trunc_safe.sql  generate_schema_name.sql  zscore.sql
dbt/models/marts/: anomaly_log.sql  cost_attribution.sql  fleet_health_daily.sql  fleet_readiness_daily.sql  flight_ops_summary.sql  infra_cost_by_team.sql  ops_kpi_dashboard.sql  schema.yml  slo_compliance.sql
dbt/models/metrics/: fleet_metrics.yml
dbt/models/staging/: sources.yml  stg_cost_billing.sql  (+5 more)
dbt/tests/: assert_fleet_score_bounded.sql  assert_no_critical_anomalies_unresolved.sql  assert_no_future_events.sql  assert_slo_not_double_counted.sql
docs/: ARCHITECTURE.md  RUNBOOK.md
great_expectations/: great_expectations.yml
great_expectations/expectations/: ops_staging.stg_fleet_events.json
ingestion/: dataflow_ingest.py
looker/dashboards/: fleet_ops_overview.dashboard.lookml
looker/views/: fleet_health_daily.view.lkml  slo_compliance.view.lkml
pipeline/: extract.py  orchestrate.py  refresh_dashboards.py  run_quality_checks.py
reports/: resource_contention_finding.md
schemas/ops_marts/: fleet_health_daily.sql
schemas/ops_raw/: cost_billing_export.sql  fleet_events.sql  slo_metrics.sql
sql/queries/: anomaly_summary.sql  cost_by_team_weekly.sql  deployment_trends.sql  extract_job_metadata.sql  fleet_health_trend.sql  freshness_check.sql  infra_event_correlation.sql  resource_utilisation.sql
sql/schemas/: infrastructure_events.sql  job_metadata.sql  ops_raw_ddl.sql  resource_allocation_logs.sql
terraform/: main.tf  outputs.tf  variables.tf
tests/: test_anomaly_detector.py  test_cleansing.py  test_dataset_curator.py  test_quality_checks.py  test_trend_calculator.py
