[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "bigquery-ops-analytics"
version = "1.0.0"
description = "BigQuery SQL analytics layer for fleet and operational data"
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Kumar Raja Puvvalla", email = "kumarrajapuvvalla@gmail.com"}
]
keywords = ["bigquery", "dbt", "airflow", "analytics", "devops", "platform-engineering"]

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "I"]
ignore = ["E501"]
exclude = ["target", ".venv", "dbt_packages"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
testpaths  = ["tests"]
addopts    = "-v --tb=short"
log_cli    = true
log_level  = "INFO"

[tool.mypy]
python_version     = "3.12"
ignore_missing_imports = true
strict             = false
